# AIIR

./: README.md
Dokumentacja/: AIIR-rozliczenie.xls  AIiR.pptx  Aplikacje internetowe i rozproszone.docx  Dokumentacja.docx  Klaster i testy (1).odt  dorobić.txt  ~$kumentacja.docx
djangoApp/: Main  TasksManager.py  db.sqlite3  manage.py
djangoApp/login/: views.py
djangoApp/pierwsze/: settings.py  urls.py  wsgi.py
djangoApp/tasks/: admin.py  forms.py  models.py  views.py
djangoApp/tasks/migrations/: 0001_initial.py  0002_auto_20150415_1448.py  0003_auto_20150415_1707.py  0004_task_start_data.py  0005_auto_20150416_2143.py  0006_auto_20150416_2152.py
djangoApp/tasks/templates/: base.html  home.html  tasks.html
djangoApp/tasks/templates/tasks/: add.html  detail.html  tasks_list.html
mpiProg/: CMakeLists.txt  README.txt
mpiProg/inc/: master.hpp  slave.hpp
mpiProg/src/: main.cpp  master.cpp  slave.cpp
